# Common

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Common_export.h  logger.h
src/: logger.cpp
